finish part of order update logic

--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -91,7 +91,7 @@
 										<a href="/showOrder" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="/resources/templates/order_info.html" onclick="return canuse()">修改订单</a>
+										<a href="/updateOrder" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
@@ -102,7 +102,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="/resources/templates/change_method.html">
+								<a href="/updatePay">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
