--- a/resources/templates/change_method.html
+++ b/resources/templates/change_method.html
@@ -87,21 +87,21 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="add_order.html" onclick="return canuse()">新建订单</a>
+										<a href="/showOrder" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="order_info.html" onclick="return canuse()">修改订单</a>
+										<a href="/updateOrder" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="timecard.html">
+								<a href="/timecard">
 									<i class="fe-type"></i>
 									<span> 维护工时卡 </span>
 								</a>
 							</li>
 							<li>
-								<a href="change_method.html">
+								<a href="/updatePay">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
@@ -317,8 +317,8 @@
 						   TemO.appendChild(newAccount);
 						   var newline= document.createElement("br");
 						   TemO.appendChild(newline);
-						 <!--  document.getElementById("how-to-pay).innerHTML += "<span>账户名称:</span>"; -->
-						   TemO.appendChild(newBankName);
+						//  <!--  document.getElementById("how-to-pay).innerHTML += "<span>账户名称:</span>"; -->
+						//    TemO.appendChild(newBankName);
 						    
 					   }
 						flag2 = false;
