--- a/resources/templates/add_employee.html
+++ b/resources/templates/add_employee.html
@@ -86,7 +86,7 @@
               <li class="menu-title">基础功能</li>
 
               <li>
-                <a href="main.html">
+                <a href="/resources/templates/main.html">
                   <i class="fe-airplay"></i>
                   <span> 个人主页 </span>
                 </a>
