--- a/resources/templates/change_method.html
+++ b/resources/templates/change_method.html
@@ -2,49 +2,32 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>家庭经济管理系统</title>
+		<title>选择支付方式</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta conte<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
-		<html lang="en">
-			<head>
-				<meta charset="utf-8" />
-				<title>Simulor - Responsive Admin Dashboard Template</title>
-				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
-				<meta content="Coderthemes" name="author" />
-				<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-				<!-- App favicon -->
-				<link rel="shortcut icon" href="assets/images/favicon.ico">
-				<script type="text/javascript">
-					// function canuse(){
-					// 	var phonenumber = <%=(String)session.getAttribute("user") %>
-					// 	if(phonenumber=="15809872335"){
-					// 		return true;
-					// 	}else{
-					// 		alert("对不起，只有管理员可以使用该功能！");
-					// 		return false;
-					// 	}
-					// }
-					//
-				</script>
-				<!-- App css -->
-				<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-				<link href="../css/icons.min.css" rel="stylesheet" type="text/css" />
-				<link href="../css/app.min.css" rel="stylesheet" type="text/css" />
-				<style type="text/css">
-					.card-body > ul {
-						list-style: none;
-					}
-
-					.card-body > ul > li {
-						position: absolute;
-						left: 200px;
-						top: 100px;
-						width: 100%;
-					}
-				</style>
-			</head>
+		<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+		<meta content="Coderthemes" name="author" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<!-- App favicon -->
+		<link rel="shortcut icon" href="/resources/assets/images/favicon.ico">
+		<script type="text/javascript">
+			// function canuse(){
+			// 	var phonenumber = <%=(String)session.getAttribute("user") %>
+			// 	if(phonenumber=="15809872335"){
+			// 		return true;
+			// 	}else{
+			// 		alert("对不起，只有管理员可以使用该功能！");
+			// 		return false;
+			// 	}
+			// }
+			//
+		</script>
+		<!-- App css -->
+		<link rel="stylesheet" href="/resources/layui/css/layui.css">
+		<script src="/resources/layui/layui.js"></script>
+		<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
+	</head>
 
 	<body>
 
@@ -59,22 +42,22 @@
 					<!-- LOGO -->
 					<a href="#" class="logo text-center mb-4">
 						<span class="logo-lg">
-							<img src="../assets/images/logo.png" alt="" height="50">
+							<img src="/resources/assets/images/logo.png" alt="" height="50">
 						</span>
 						<span class="logo-sm">
-							<img src="../assets/images/logo-sm.png" alt="" height="24">
+							<img src="/resources/assets/images/logo-sm.png" alt="" height="24">
 						</span>
 					</a>
 
 					<!--- Sidemenu -->
 					<div id="sidebar-menu">
-					
+
 						<ul class="metismenu" id="side-menu">
-					
+
 							<li class="menu-title">基础功能</li>
-					
+
 							<li>
-								<a href="main.html">
+								<a href="/resources/templates/main.html">
 									<i class="fe-airplay"></i>
 									<span> 个人主页 </span>
 								</a>
@@ -87,26 +70,26 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="/showOrder" onclick="return canuse()">新建订单</a>
+										<a href="add_order.html" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="/updateOrder" onclick="return canuse()">修改订单</a>
+										<a href="order_info.html" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="/timecard">
+								<a href="timecard.html">
 									<i class="fe-type"></i>
 									<span> 维护工时卡 </span>
 								</a>
 							</li>
 							<li>
-								<a href="/updatePay">
+								<a href="change_method.html">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
 							</li>
-					
+
 							<li>
 								<a href="employee_report.html">
 									<i class="mdi mdi-account-heart"></i>
@@ -116,7 +99,7 @@
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="fe-cpu"></i>
+									<i class="layui-icon layui-icon-auz"></i>
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
@@ -152,9 +135,10 @@
 					<div class="navbar-custom">
 						<ul class="list-unstyled topbar-right-menu float-right mb-0">
 							<li class="dropdown notification-list">
-								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
-								 aria-expanded="false">
-									<img src="../assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
+								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
+									role="button" aria-haspopup="false" aria-expanded="false">
+									<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image"
+										class="rounded-circle">
 									<small class="pro-user-name ml-1">
 										{{.showUsername}}
 									</small>
@@ -201,7 +185,7 @@
 						<div class="app-search">
 							<form>
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="No Search..." disabled>
+									<input type="text" class="form-control" placeholder="No Search/resources." disabled>
 									<div class="input-group-append">
 
 									</div>
@@ -212,117 +196,69 @@
 					<!-- end Topbar -->
 					<!-- Start Content-->
 					<div class="container-fluid">
-
-						<!-- start page title -->
-						<!-- <div class="row">
-                            <div class="col-12">
-                                <div class="page-title-box">
-                                    <div class="page-title-right">
-                                        <ol class="breadcrumb m-0">
-                                            <li class="breadcrumb-item"><a href="#">Daily</a></li>
-                                            <li class="breadcrumb-item active">Life</li>
-                                        </ol>
-                                    </div>
-                                    <h4 class="page-title">Famliy Routine</h4>
-                                </div>
-                            </div>
-                        </div>     -->
-						<!-- end page title -->
 						<div class="row">
 							<div class="col-12">
-								<!-- <div class="card"> -->
-									<div class="card-body" id="banner">
-										<form action="" method="get" name="frm">
-											<div id="how-to-pay">
-												<h3>请选择工资的支付方式</h3>
-												<label><input type="radio" name="method" value="0" /> 直取 </label>
-												<label><input type="radio" name="method" id="mail" value="邮寄" onClick="getAddr('text')" /> 邮寄 </label>
-												<label><input type="radio" name="method" id="deposit" value="银行储蓄" onClick="getAccount('text')" /> 银行储蓄 </label>
-											</div>
-										</form>
+								<div class="card">
+									<div class="card-body">
+										<h4 class="header-title">
+											<选择支付方式>
+										</h4>
+										<br><br>
+										<a href="#" class="layui-btn">支票直取</a> <br><br>
+										<a href="/resources/templates/get_address.html" class="layui-btn layui-btn-normal">邮递到户</a> <br><br>
+										<a href="/resources/templates/get_bank_account.html" class="layui-btn layui-btn-warm">银行储蓄</a>
+									</div> <!-- end card body-->
+								</div> <!-- end card -->
+							</div><!-- end col-->
+						</div>
+						<!-- end row-->
+
+
+
+					</div> <!-- container -->
+
+					<!-- Footer Start -->
+					<footer class="footer">
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-md-6">
+									Happy Working! &copy; 2021 - JLU.edu
+								</div>
+								<div class="col-md-6">
+									<div class="text-md-right footer-links d-none d-sm-block">
+										<a href="#">LP</a>
+										<a href="#">LZY</a>
+										<a href="#">CYZ</a>
+										<a href="#">LH</a>
+										<a href="#">LW</a>
 									</div>
 								</div>
 							</div>
 						</div>
-					
-						<!-- Footer Start -->
-						<footer class="footer">
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-md-6">
-										Happy Working! &copy; 2021 - JLU.edu
-									</div>
-									<div class="col-md-6">
-										<div class="text-md-right footer-links d-none d-sm-block">
-											<a href="#">LP</a>
-											<a href="#">LZY</a>
-											<a href="#">CYZ</a>
-											<a href="#">LH</a>
-											<a href="#">LW</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</footer>
-						<!-- end Footer -->
-
-					</div>
-
-					<!-- ============================================================== -->
-					<!-- End Page content -->
-					<!-- ============================================================== -->
-
+					</footer>
+					<!-- end Footer -->
 
 				</div>
-				<!-- END wrapper -->
+
+				<!-- ============================================================== -->
+				<!-- End Page content -->
+				<!-- ============================================================== -->
 
 
-				<!-- App js -->
-				<script src="../js/vendor.min.js"></script>
-				<script src="../js/app.min.js"></script>
+			</div>
+			<!-- END wrapper -->
 
-				<!-- Plugins js -->
-				<script src="../js/vendor/Chart.bundle.js"></script>
-				<script src="../js/vendor/jquery.sparkline.min.js"></script>
-				<script src="../js/vendor/jquery.knob.min.js"></script>
 
-				<script src="../js/pages/dashboard.init.js"></script>
-				<!-- record map -->
-				<script language="javascript">
-					var flag1 = true, flag2 = true;
-					function getAddr(mytype){ 
-						if (flag1) {
-							var mytype,TemO=document.getElementById("how-to-pay");
-							var newAddr = document.createElement("input"); 
-							newAddr.type=mytype; 
-							newAddr.name="addr"; 
-							var newline= document.createElement("br");
-							TemO.appendChild(newline); 
-							TemO.appendChild(newAddr); 
-						}
-						flag1 = false;
-					}
-				   function getAccount(mytype){
-					   if (flag2) {
-						   var mytype,TemO=document.getElementById("how-to-pay");
-						   var newAccount = document.createElement("input"); 
-						   var newBankName = document.createElement("input");
-						   var newline= document.createElement("br");
-						   TemO.appendChild(newline);
-						   // document.getElementById("how-to-pay).innerHTML += "<span>账户名称:</span>";
-						   newAccount.type=mytype; 
-						   newAccount.name="account"; 
-						   newBankName.type=mytype;
-						   newBankName.name="bank-name";	
-						   TemO.appendChild(newAccount);
-						   var newline= document.createElement("br");
-						   TemO.appendChild(newline);
-						//  <!--  document.getElementById("how-to-pay).innerHTML += "<span>账户名称:</span>"; -->
-						//    TemO.appendChild(newBankName);
-						    
-					   }
-						flag2 = false;
-				    } 
-				</script>
+			<!-- App js -->
+			<script src="/resources/js/vendor.min.js"></script>
+			<script src="/resources/js/app.min.js"></script>
+
+			<!-- Plugins js -->
+			<script src="/resources/js/vendor/Chart.bundle.js"></script>
+			<script src="/resources/js/vendor/jquery.sparkline.min.js"></script>
+			<script src="/resources/js/vendor/jquery.knob.min.js"></script>
+
+			<script src="/resources/js/pages/dashboard.init.js"></script>
+			<!-- record map -->
 	</body>
 </html>
