--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -75,7 +75,7 @@
 						<ul class="metismenu" id="side-menu">
 							<li class="menu-title">基础功能</li>
 							<li>
-								<a href="main.html">
+								<a href="/resources/templates/main.html">
 									<i class="fe-airplay"></i>
 									<span> 个人主页 </span>
 								</a>
