--- a/resources/templates/change_method.html
+++ b/resources/templates/change_method.html
@@ -19,7 +19,19 @@
 			// 		return false;
 			// 	}
 			// }
-			//
+			//		
+			function updatePay() {
+				var xml = new XMLHttpRequest();
+				xml.open("get", "/updatePickupPay", true);
+				xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+				xml.send();
+				xml.onreadystatechange = function() {
+					if (xml.readyState == 4) {
+							alert("【修改成功】");
+							location.href = "/resources/templates/main.html";
+						}
+					}
+			}
 		</script>
 		<!-- App css -->
 		<link rel="stylesheet" href="/resources/layui/css/layui.css">
@@ -78,13 +90,13 @@
 								</ul>
 							</li>
 							<li>
-								<a href="timecard.html">
+								<a href="/timecard">
 									<i class="fe-type"></i>
 									<span> 维护工时卡 </span>
 								</a>
 							</li>
 							<li>
-								<a href="change_method.html">
+								<a href="/updatePay">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
@@ -204,7 +216,7 @@
 											<选择支付方式>
 										</h4>
 										<br><br>
-										<a href="#" class="layui-btn">支票直取</a> <br><br>
+										<a href="#" class="layui-btn" onclick="updatePay()">支票直取</a> <br><br>
 										<a href="/resources/templates/get_address.html" class="layui-btn layui-btn-normal">邮递到户</a> <br><br>
 										<a href="/resources/templates/get_bank_account.html" class="layui-btn layui-btn-warm">银行储蓄</a>
 									</div> <!-- end card body-->
