--- a/resources/templates/order_info.html
+++ b/resources/templates/order_info.html
@@ -317,15 +317,12 @@
 													</c:when>
 													<c:otherwise>
 														<c:forEach items="${alist}" var="out">
-															<form action="GetExpenseByID" method="post">
+															<form action="/updateOldOrder" method="get">
 																<!-- 默认显示最近一条，输出要替换成Golang提取数据的方式 -->
 
 
-																 {{range .Orders}}
-
 																 <tr>
 
-																	
 																	 <td>
 																		 <span>{{.Contact}}</span>
 																		 
@@ -345,17 +342,20 @@
 																		<td>
 																			<span>{{.Closed}}</span>
 																		</td>
+
+																		
 																		<td>
 																			<input type="submit" value="修改"
 																			class="btn btn-primary btn-sm">
 																			<input type="button" value="删除"
 																			class="btn btn-danger btn-sm"
 																			onclick="deletes(this)">
-																			<input type="hidden" name="orderID" value="{{.ID}}" id="orderID" />
+																			
+																			<td>
+																				<input type="hidden" name="orderID" value={{.ID}} id="orderID" />
+																			</td>
 																		</td>
 																	</tr>
-																	
-																	{{end}}
 																	
 
 															</form>
