--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -123,7 +123,7 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="/resources/templates/employee_info.html" onclick="return canuse()">维护员工信息</a>
+										<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
 										<a href="/resources/templates/admin_report.html" onclick="return canuse()">管理员工报告</a>
