--- a/resources/templates/employee_report.html
+++ b/resources/templates/employee_report.html
@@ -3,8 +3,8 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" href="../layui/css/layui.css">
-		<script src="../layui/layui.js"></script>
+		<link rel="stylesheet" href="/resources/layui/css/layui.css">
+		<script src="/resources/layui/layui.js"></script>
 		<script type="text/javascript">
 			// function canuse() {
 			// 	var phonenumber = < %= (String) session.getAttribute("user") % >
@@ -32,23 +32,23 @@
 				});
 			});
 
-			function deletes(root) {
-				var flag = confirm("【确认删除？】");
-				if (flag) {
+			// function deletes(root) {
+			// 	var flag = confirm("【确认删除？】");
+			// 	if (flag) {
 
-					var outid = root.nextElementSibling.value;
-					var xml = new XMLHttpRequest();
-					xml.open("get", "DeleteExpenseServlet?eid=" + outid, true);
-					xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-					xml.send(null);
-					xml.onreadystatechange = function() {
-						if (xml.readyState == 4) {
-							alert("【删除成功】");
-							location.href = "DisplayExpenseServlet";
-						}
-					}
-				}
-			}
+			// 		var outid = root.nextElementSibling.value;
+			// 		var xml = new XMLHttpRequest();
+			// 		xml.open("get", "DeleteExpenseServlet?eid=" + outid, true);
+			// 		xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			// 		xml.send(null);
+			// 		xml.onreadystatechange = function() {
+			// 			if (xml.readyState == 4) {
+			// 				alert("【删除成功】");
+			// 				location.href = "DisplayExpenseServlet";
+			// 			}
+			// 		}
+			// 	}
+			// }
 		</script>
 		<title>生成员工报告</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,19 +56,19 @@
 		<meta content="Coderthemes" name="author" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!-- App favicon -->
-		<link rel="shortcut icon" href="../assets/images/favicon.ico">
+		<link rel="shortcut icon" href="/resources/assets/images/favicon.ico">
 
 		<!-- third party css -->
-		<link href="../css/vendor/dataTables.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<link href="../css/vendor/responsive.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<link href="../css/vendor/buttons.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<link href="../css/vendor/select.bootstrap4.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/vendor/dataTables.bootstrap4.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/vendor/responsive.bootstrap4.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/vendor/buttons.bootstrap4.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/vendor/select.bootstrap4.css" rel="stylesheet" type="text/css" />
 		<!-- third party css end -->
 
 		<!-- App css -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="../css/icons.min.css" rel="stylesheet" type="text/css" />
-		<link href="../css/app.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+		<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<!-- Begin page -->
@@ -82,10 +82,10 @@
 					<!-- LOGO -->
 					<a href="MainServlet" class="logo text-center mb-4">
 						<span class="logo-lg">
-							<img src="../assets/images/logo.png" alt="" height="50">
+							<img src="/resources/assets/images/logo.png" alt="" height="50">
 						</span>
 						<span class="logo-sm">
-							<img src="../assets/images/logo-sm.png" alt="" height="24">
+							<img src="/resources/assets/images/logo-sm.png" alt="" height="24">
 						</span>
 					</a>
 
@@ -126,7 +126,7 @@
 									<span> 选择支付方式 </span>
 								</a>
 							</li>
-					
+
 							<li>
 								<a href="employee_report.html">
 									<i class="mdi mdi-account-heart"></i>
@@ -170,7 +170,7 @@
 							<li class="dropdown notification-list">
 								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
 									role="button" aria-haspopup="false" aria-expanded="false">
-									<img src="../assets/images/users/avatar-1.jpg" alt="user-image"
+									<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image"
 										class="rounded-circle">
 									<small class="pro-user-name ml-1">
 										{{.showUsername}}
@@ -217,7 +217,7 @@
 						<div class="app-search">
 							<form>
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="No Search..." disabled>
+									<input type="text" class="form-control" placeholder="No Search/resources." disabled>
 									<div class="input-group-append">
 									</div>
 								</div>
@@ -255,7 +255,7 @@
 													style="font-size: 35px; color: #1E9FFF;"></i>
 											</div>
 											<h5 class="text-muted font-weight-normal mt-0">总工作时长</h5>
-											<h3 class="mt-2">${AllHours}</h3>
+											<h3 class="mt-2">{{.Hours}}</h3>
 										</div>
 										<div id="sparkline1"></div>
 									</div> <!-- end card-body-->
@@ -270,7 +270,7 @@
 												<i class="mdi mdi-currency-usd text-danger widget-icon"></i>
 											</div>
 											<h5 class="text-muted font-weight-normal mt-0">年初至今工资</h5>
-											<h3 class="mt-2">${AllIncome}</h3>
+											<h3 class="mt-2">{{.PayYear}}</h3>
 										</div>
 										<div id="sparkline2"></div>
 									</div> <!-- end card-body-->
@@ -286,16 +286,40 @@
 													style="font-size: 35px; color: #1E9FFF;"></i>
 											</div>
 											<h5 class="text-muted font-weight-normal mt-0">病假 / 休假天数</h5>
-											<h3 class="mt-2">${AllHoliday}</h3>
+											<h3 class="mt-2">{{.Vacation}}</h3>
 										</div>
-										<div id="sparkline4"></div>
+										<div id="sparkline4">
+										</div>
+
 									</div> <!-- end card-body-->
 								</div> <!-- end card-->
 							</div> <!-- end col-->
 						</div>
 						<!-- end row -->
-
-
+						<div class="row">
+							<div class="col-12" style="border: 0;">
+								<div class="card" style="border: 0;">
+									<div class="card-body" >
+										<form action="/chargeProject" method="get">
+										<span>【分项目统计工时】</span>
+										<br><br>
+										<span>
+											<select name="chargeNumber" data-plugin="customselect" >
+												{{range .Projects}}
+													<option value={{.ChargeNumber}}>{{.ProjectName}}</option>
+												{{end}}
+											</select>
+											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+											<button class="layui-btn" lay-submit>查询</button>
+										</span>
+											<br>
+											<!-- <input type="submit" value="查询" style="width:200px"
+													class="btn btn-block btn-primary" /> -->
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
 
 						<div class="row">
 							<div class="col-12">
@@ -309,31 +333,22 @@
 													<tr>
 														<th>项目号码</th>
 														<th>总工时</th>
-														<th>开始时间</th>
-														<th>结束时间</th>
 													</tr>
 												</thead>
 
 
 												<tbody>
 													<c:forEach items="${alist}" var="show">
+														{{range .Records}}
 														<tr>
-
 															<td>
-																<span>${show.charge_number}</span>
-
+																<span>{{.ProjectName}}</span>
 															</td>
 															<td>
-																<span>${show.total_hours}</span>
-
-															</td>
-															<td>
-																<span>${show.start_date}</span>
-															</td>
-															<td>
-																<span>${show.end_date}</span>
+																<span>{{.ProjectHours}}</span>
 															</td>
 														</tr>
+														{{end}}
 													</c:forEach>
 												</tbody>
 											</table>
@@ -363,25 +378,25 @@
 		<!-- END wrapper -->
 
 		<!-- App js -->
-		<script src="../js/vendor.min.js"></script>
-		<script src="../js/app.min.js"></script>
+		<script src="/resources/js/vendor.min.js"></script>
+		<script src="/resources/js/app.min.js"></script>
 
 		<!-- third party js -->
 		<script src="js/vendor/jquery.dataTables.js"></script>
 		<script src="js/vendor/dataTables.bootstrap4.js"></script>
 		<script src="js/vendor/dataTables.responsive.min.js"></script>
-		<script src="../js/vendor/responsive.bootstrap4.min.js"></script>
-		<script src="../js/vendor/dataTables.buttons.min.js"></script>
-		<script src="../js/vendor/buttons.bootstrap4.min.js"></script>
-		<script src="../js/vendor/buttons.html5.min.js"></script>
-		<script src="../js/vendor/buttons.flash.min.js"></script>
-		<script src="../js/vendor/buttons.print.min.js"></script>
-		<script src="../js/vendor/dataTables.keyTable.min.js"></script>
-		<script src="../js/vendor/dataTables.select.min.js"></script>
+		<script src="/resources/js/vendor/responsive.bootstrap4.min.js"></script>
+		<script src="/resources/js/vendor/dataTables.buttons.min.js"></script>
+		<script src="/resources/js/vendor/buttons.bootstrap4.min.js"></script>
+		<script src="/resources/js/vendor/buttons.html5.min.js"></script>
+		<script src="/resources/js/vendor/buttons.flash.min.js"></script>
+		<script src="/resources/js/vendor/buttons.print.min.js"></script>
+		<script src="/resources/js/vendor/dataTables.keyTable.min.js"></script>
+		<script src="/resources/js/vendor/dataTables.select.min.js"></script>
 		<!-- third party js ends -->
 
 		<!-- demo app -->
-		<script src="../js/pages/datatables.init.js"></script>
+		<script src="/resources/js/pages/datatables.init.js"></script>
 		<!-- end demo js-->
 	</body>
 </html>
