--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -109,7 +109,7 @@
 							</li>
 
 							<li>
-								<a href="/resources/templates/employee_report.html">
+								<a href="/employeeReport">
 									<i class="mdi mdi-account-heart"></i>
 									<span> 生成员工报告</span>
 								</a>
@@ -126,7 +126,7 @@
 										<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="/resources/templates/admin_report.html" onclick="return canuse()">管理员工报告</a>
+										<a href="/employeeReport" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
