--- a/resources/templates/order_info.html
+++ b/resources/templates/order_info.html
@@ -130,7 +130,7 @@
 							</li>
 					
 							<li>
-								<a href="employee_report.html">
+								<a href="/employeeReport">
 									<i class="mdi mdi-account-heart"></i>
 									<span> 生成员工报告</span>
 								</a>
