--- a/resources/templates/update_employee.html
+++ b/resources/templates/update_employee.html
@@ -122,7 +122,7 @@
               </li>
 
               <li>
-                <a href="employee_report.html">
+                <a href="/employeeReport">
                   <i class="mdi mdi-account-heart"></i>
                   <span> 生成员工报告</span>
                 </a>
