--- a/resources/templates/timecard.html
+++ b/resources/templates/timecard.html
@@ -49,6 +49,11 @@
 					}
 				}
 			}
+
+			function check() {
+				alert("添加工时记录成功！！点击返回主菜单...");
+				location.href = "/resources/templates/main.html";
+			}
 		</script>
 		<title>维护工时卡</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -426,7 +431,7 @@
 									<tr>
 										<td colspan="2">
 											<input type="submit" value="确认" id="makeadd" class="btn btn-success"
-												onclick="return check()">
+												onclick="check()">
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											&nbsp;&nbsp;&nbsp;
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
