--- a/resources/templates/get_address.html
+++ b/resources/templates/get_address.html
@@ -35,7 +35,7 @@
 			}
 			function redirect() {
 				alert("【修改成功】");
-				location.href = "/resources/templates/main.html"
+				location.href = "https://baidu.com";
 			}
 		</script>
 		<!-- App css -->
