--- a/resources/templates/timecard.html
+++ b/resources/templates/timecard.html
@@ -147,10 +147,10 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
+										<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
+										<a href="/employeeReport" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
