--- a/resources/templates/update_employee.html
+++ b/resources/templates/update_employee.html
@@ -136,12 +136,12 @@
                 </a>
                 <ul class="nav-second-level" aria-expanded="false">
                   <li>
-                    <a href="employee_info.html" onclick="return canuse()"
+                    <a href="/manageEmployee" onclick="return canuse()"
                       >维护员工信息</a
                     >
                   </li>
                   <li>
-                    <a href="admin_report.html" onclick="return canuse()"
+                    <a href="/employeeReport" onclick="return canuse()"
                       >管理员工报告</a
                     >
                   </li>
