--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -137,7 +137,11 @@
 					<div class="clearfix"></div>
 
 				</div>
-				<!-- Sidebar -left -->
+				<!-- Sidebar -left --func check(err error) {
+	if err != nil {
+		log.Fatal(err)
+	}
+}>
 
 			</div>
 			<!-- Left Sidebar End -->
